...
        val scope = rememberCoroutineScope()
        Box(Modifier
            .testTag("WordScreenSidebar")
            .width(216.dp)
            .padding(top = if(isMacOS()) 44.dp else 0.dp)
...
                        modifier = Modifier.fillMaxWidth().clickable { showDictationDialog = true }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("听写测试", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Icon(
...

                val wordText = if(wordScreenState.memoryStrategy== MemoryStrategy.Dictation ||
                    wordScreenState.memoryStrategy== MemoryStrategy.DictationTest ) "显示下划线" else "显示单词"

                TooltipArea(
...
                        }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text(text = "显示音标", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("显示词形", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("英文释义", color = MaterialTheme.colors.onBackground)

                        Spacer(Modifier.width(15.dp))
...
                        }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("中文释义", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("显示字幕", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        .clickable { }.padding(start = 16.dp, end = 8.dp)
                ) {
                    Text("击键音效", color = MaterialTheme.colors.onBackground)
                    Spacer(Modifier.width(15.dp))
                    Switch(
...
                        .clickable { }.padding(start = 16.dp, end = 8.dp)
                ) {
                    Text("提示音效", color = MaterialTheme.colors.onBackground)
                    Spacer(Modifier.width(15.dp))
                    Switch(
...
                        modifier = Modifier.fillMaxWidth().clickable { }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text(text = "自动切换", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        modifier = Modifier.fillMaxWidth().clickable { }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("外部字幕", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...
                        modifier = Modifier.fillMaxWidth().clickable { }.padding(start = 16.dp, end = 8.dp)
                    ) {
                        Text("抄写字幕", color = MaterialTheme.colors.onBackground)
                        Spacer(Modifier.width(15.dp))
                        Switch(
...

                    Row {
                        Text("音量控制", color = MaterialTheme.colors.onBackground)
                    }
                    Spacer(Modifier.width(15.dp))
...
                        .padding(start = 16.dp, end = 8.dp)
                ) {
                    Text("发音设置", color = MaterialTheme.colors.onBackground)
                    Spacer(Modifier.width(15.dp))
                    CursorDropdownMenu(
...
