...
                        openDocument = {documentWindowVisible = true},
                        parentWindow = window,
                        openChooseVocabulary = openChooseVocabulary
                    )
                }

                Header(
                    wordScreenState = wordScreenState,
                    title = title,
                    window = window,
                    wordRequestFocus = wordRequestFocus,
                    modifier = Modifier.align(Alignment.TopCenter).fillMaxWidth()
                )
...
                        contains = contains,
                        disappear = {showBookmark = false}
                    )
                }

                Row(Modifier.align(Alignment.Center).padding(top = 48.dp)){
                    Word(
                        word = currentWord,
                        global = appState.global,
                        wordVisible = wordScreenState.wordVisible,
                        pronunciation = wordScreenState.pronunciation,
                        azureTTS = azureTTS,
                        playTimes = wordScreenState.playTimes,
...
                    alignment = Alignment.CenterEnd,
                    offset = DpOffset.Zero
                )
            ) {
                IconButton(
                    onClick = { previous() },
                    modifier = Modifier.testTag("PreviousButton")
                ) {
                    Icon(
                        Icons.Filled.ArrowBackIosNew,
                        contentDescription = "Localized description",
                        tint = MaterialTheme.colors.primary
                    )
...
                    alignment = Alignment.CenterStart,
                    offset = DpOffset.Zero
                )
            ) {
                IconButton(
                    onClick = { toNext()},
                    modifier = Modifier.testTag("NextButton")
                ) {
                    Icon(
                        Icons.Filled.ArrowForwardIos,
                        contentDescription = "Localized description",
                        tint = MaterialTheme.colors.primary
                    )
...
