...
    close:() -> Unit,
    wordRequestFocus:() -> Unit,
    wordScreenState: WordScreenState,
    isMultiple:Boolean
) {
    DialogWindow(
        title = if(isMultiple) "听写测试，可以选择多个章节" else "选择章节",
        onCloseRequest = { close() },
        resizable = true,
        state = rememberDialogState(
            position = WindowPosition(Alignment.Center),
            size = DpSize(930.dp, 785.dp)
        ),
...
